syntax = "proto3";

package agent;

option go_package = "torv.io/worker-agent/proto";

service AgentService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

message RegisterRequest {}

message RegisterResponse {
  bool success = 1;
  string worker_id = 2;
  string error = 3;
}

message HeartbeatRequest {
  string worker_id = 1;
  string status = 2;
}

message HeartbeatResponse {
  bool success = 1;
  string assigned_worker_id = 2;
}
