syntax = "proto3";

package proto;

option go_package = "torv.io/worker-agent/proto";

service WorkerService {
  rpc ExecuteStageRun(ExecuteStageRunRequest) returns (ExecuteStageRunResponse);
}

message ExecuteStageRunRequest {
  string stage_id = 1;
  string stage_run_id = 2;
  string code = 3;
  string context = 4;
  string stage_config = 5;
}

message ExecuteStageRunResponse {
  Status status = 1;
  string error = 2;
  map<string, string> outputs = 3;
}

enum Status {
  UNSPECIFIED = 0;
  EXECUTED = 1;
  FAILED = 2;
}
